--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -108,6 +108,8 @@ complete module 'C,/*,f,' 'C,.*,f,' 'C,~/*,f,' \
         "p/1/(@comp_cmds@ @comp_opts@)/" \
         "n/-*/(@comp_cmds@)/"
 
-complete ml 'c/-/`_module_loaded`/' \
-            'p/1-/`_module_not_yet_loaded`//'
+complete ml \
+        "C/--*/(@comp_long_opts@)/" \
+        'c/-/`_module_loaded`/' \
+        'p/1-/`_module_not_yet_loaded`//'
 
