Correct file search to avoid resolving glob dir
Correctly use "glob" Tcl command not to resolve glob character (like
"*") in directory, only in file name.

Fix modulepath file search when libtclenvmodules is disabled and
modulepath contains glob characters (like * or ?).

--- a/tcl/cache.tcl.in
+++ b/tcl/cache.tcl.in
@@ -69,7 +69,7 @@ proc getLimitedAccessesInDirectory {modpath} {
             # only walk through directory content if its access is not limited
             } else {
                # get all elements found in directory (regular and dot files)
-               set direlt_list [glob -nocomplain $elt/*]
+               set direlt_list [glob -nocomplain -directory $elt *]
                foreach eltindir [glob -nocomplain -types hidden -directory\
                   $elt -tails *] {
                   if {$eltindir ni {. ..}} {
