--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2523,7 +2523,7 @@ proc doesModuleHaveSym {mod} {
 proc __getFilesInDirectory {dir fetch_dotversion} {
    set dir_list [list]
 
-   set elt_list [glob -nocomplain $dir/*]
+   set elt_list [glob -nocomplain -directory $dir *]
 
    # Add each element in the current directory to the list
    foreach elt $elt_list {
