Add "lsb-release" modulefile command
Add "lsb-release" modulefile command available from modulerc and
modulefile evaluation context. This command accepts a sub-command as
argument among id, description, release and codename. This new modulefile
command relies on the corresponding "lsb_*" new states, which in turns
rely on the result of the lsb_release external command.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -22,7 +22,7 @@
 
 # Runtime state properties (default value, proc to call to initialize state
 # value?)
-##nagelfar ignore +31 Found constant
+##nagelfar ignore +34 Found constant
 array set g_state_defs [list\
    autoinit {0}\
    clock_seconds {<undef> initStateClockSeconds}\
@@ -39,6 +39,9 @@ array set g_state_defs [list\
    is_win {<undef> initStateIsWin}\
    kernelversion {<undef> {runCommand uname -v}}\
    lm_info_cached {0}\
+   lsb_codename {<undef> {runCommand lsb_release -s -c}}\
+   lsb_id {<undef> {runCommand lsb_release -s -i}}\
+   lsb_release {<undef> {runCommand lsb_release -s -r}}\
    machine [list $::tcl_platform(machine)]\
    nodename {<undef> {runCommand uname -n}}\
    os [list $::tcl_platform(os)]\
