--- a/tcl/interp.tcl.in
+++ b/tcl/interp.tcl.in
@@ -89,7 +89,8 @@ proc initModfileModeAliases {mode auto aliasesVN aliasesPassArgVN\
          modulepath-label modulepath-label exit exitModfileCmd reportCmdTrace\
          reportCmdTrace reportWarning reportWarning reportError reportError\
          incrErrorCount incrErrorCount report report isWin initStateIsWin\
-         puts putsModfileCmd getModuleContent getModuleContent]
+         puts putsModfileCmd getModuleContent getModuleContent lsb-release\
+         lsb-release]
 
       if {[getConf source_cache]} {
          lappend ::g_modfileBaseAliases source sourceModfileCmd
@@ -587,7 +588,7 @@ proc execute-modulerc {modfile modname modspec} {
          module-virtual module-forbid module-forbid module-hide module-hide\
          module-tag module-tag module-info module-info modulepath-label\
          modulepath-label setModulesVersion setModulesVersion\
-         getModuleContent getModuleContent]
+         getModuleContent getModuleContent lsb-release lsb-release]
 
       if {[getConf source_cache]} {
          set ::g_modrcAliases(source) sourceModfileCmd
