cirrus: add lsb-release package to one Ubuntu test case

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -156,7 +156,7 @@ task:
     yes | unminimize || true
     # install requirements
     apt-get update
-    apt-get -y install wget expect-dev dejagnu python3-sphinx gzip man-db bash tcsh ksh zsh fish tcl tcl8.6 perl python3 ruby cmake r-base-core
+    apt-get -y install wget expect-dev dejagnu python3-sphinx gzip man-db bash tcsh ksh zsh fish tcl tcl8.6 perl python3 ruby cmake r-base-core lsb-release
     # libtclenvmodules build requirements
     apt-get -y install gcc autoconf tcl8.6-dev
     # requirements for source-sh extra tests
