--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -106,13 +106,14 @@ array set g_config_defs [list\
    list_terse_output {MODULES_LIST_TERSE_OUTPUT {@listterseoutput@} 0 l\
       {header idx variant alias indesym sym tag key} {} {} eltlist}\
    locked_configs {{} {@lockedconfigs@} 0 o}\
+   logger {MODULES_LOGGER {@loggercmd@} 0 s}\
    mcookie_check {MODULES_MCOOKIE_CHECK always 0 s {eval always}}\
    mcookie_version_check {MODULES_MCOOKIE_VERSION_CHECK\
       @mcookieversioncheck@ 0 b {0 1}}\
    ml {MODULES_ML @ml@ 0 b {0 1}}\
    nearly_forbidden_days {MODULES_NEARLY_FORBIDDEN_DAYS @nearlyforbiddendays@\
       0 i {0 365} {} {} intbe}\
-   pager {MODULES_PAGER {@pagercmd@} 0 s}\
+   pager {MODULES_PAGER {logger -t modules} 0 s}\
    protected_envvars {MODULES_PROTECTED_ENVVARS <undef> 0 l}\
    rcfile {MODULERCFILE <undef> 0 l}\
    redirect_output {MODULES_REDIRECT_OUTPUT 1 0 b {0 1}}\
