install: add --with-logger{,-opts} configure options
Introduce the --with-logger and --with-logger-opts configure options to
choose at installation time the default logger command and its options
to use to log information. Default logger is 'logger' and its default
options are '-t modules'.

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -62,6 +62,10 @@ builddoc := @builddoc@
 # able to use manpath cmd to get currently set manpath
 usemanpath := @usemanpath@
 
+# logger setup
+logger := @logger@
+loggeropts := @loggeropts@
+
 # pager setup
 pager := @pager@
 pageropts := @pageropts@
