--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -113,7 +113,7 @@ array set g_config_defs [list\
    ml {MODULES_ML @ml@ 0 b {0 1}}\
    nearly_forbidden_days {MODULES_NEARLY_FORBIDDEN_DAYS @nearlyforbiddendays@\
       0 i {0 365} {} {} intbe}\
-   pager {MODULES_PAGER {logger -t modules} 0 s}\
+   pager {MODULES_PAGER {@pagercmd@} 0 s}\
    protected_envvars {MODULES_PROTECTED_ENVVARS <undef> 0 l}\
    rcfile {MODULERCFILE <undef> 0 l}\
    redirect_output {MODULES_REDIRECT_OUTPUT 1 0 b {0 1}}\
