--- a/site.exp.in
+++ b/site.exp.in
@@ -47,6 +47,13 @@ if {$install_pageropts ne {}} {
     append install_pagercmd " $install_pageropts"
 }
 
+set install_logger "@logger@"
+set install_loggeropts "@loggeropts@"
+set install_loggercmd $install_logger
+if {$install_loggeropts ne {}} {
+    append install_loggercmd " $install_loggeropts"
+}
+
 set install_verbosity "@verbosity@"
 
 set install_color "@color@"
