Add logged_events configuration option
Add logged_events configuration option that defines the kind of events
to log. Nothing is logged by default. When configuration is modified it
sets the MODULES_LOGGED_EVENTS environment variable.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -106,6 +106,8 @@ array set g_config_defs [list\
    list_terse_output {MODULES_LIST_TERSE_OUTPUT {@listterseoutput@} 0 l\
       {header idx variant alias indesym sym tag key} {} {} eltlist}\
    locked_configs {{} {@lockedconfigs@} 0 o}\
+   logged_events {MODULES_LOGGED_EVENTS {} 0 l {all_eval req_eval req_cmd} {}\
+      {} eltlist}\
    logger {MODULES_LOGGER {@loggercmd@} 0 s}\
    mcookie_check {MODULES_MCOOKIE_CHECK always 0 s {eval always}}\
    mcookie_version_check {MODULES_MCOOKIE_VERSION_CHECK\
