install: add --with-logged-events configure option
Introduce the --with-logged-events configure option to choose at
installation time the default list of events to log. Default is ''.

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -63,6 +63,7 @@ builddoc := @builddoc@
 usemanpath := @usemanpath@
 
 # logger setup
+loggedevents := @loggedevents@
 logger := @logger@
 loggeropts := @loggeropts@
 
