--- a/site.exp.in
+++ b/site.exp.in
@@ -47,6 +47,7 @@ if {$install_pageropts ne {}} {
     append install_pagercmd " $install_pageropts"
 }
 
+set install_loggedevents "@loggedevents@"
 set install_logger "@logger@"
 set install_loggeropts "@loggeropts@"
 set install_loggercmd $install_logger
