rpm: requires util-linux-core for log feature

--- a/contrib/rpm/environment-modules.spec.in
+++ b/contrib/rpm/environment-modules.spec.in
@@ -15,6 +15,11 @@ BuildRequires:  dejagnu
 BuildRequires:  make
 BuildRequires:  sed
 BuildRequires:  less
+%if 0%{?rhel} && 0%{?rhel} <= 8
+BuildRequires:  util-linux
+%else
+BuildRequires:  util-linux-core
+%endif
 %if 0%{?rhel} && 0%{?rhel} <= 6
 BuildRequires:  net-tools
 BuildRequires:  procps
@@ -28,6 +33,11 @@ BuildRequires:  tcl-devel
 Requires:       tcl
 Requires:       sed
 Requires:       less
+%if 0%{?rhel} && 0%{?rhel} <= 8
+Requires:       util-linux
+%else
+Requires:       util-linux-core
+%endif
 Requires:       vim-filesystem
 %if 0%{?rhel} && 0%{?rhel} <= 6
 Requires:       procps
