--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -25,6 +25,8 @@
 proc flushAndExit {code} {
    # output all shell code generated on stdout
    renderFlush
+   # send messages to log if any and enabled
+   logFlush
    # output last messages on the report file descriptor and close it
    reportFlush
 
