Add requested argument to execute-modulefile
Update execute-modulefile procedure to add requested argument. This
piece of information tells if the evaluation has been requested by user
or if it is an automatically triggered evaluation.

Internal evaluation (refresh, scan and whatis) are considered auto
evaluations.

--- a/tcl/interp.tcl.in
+++ b/tcl/interp.tcl.in
@@ -228,8 +228,8 @@ proc skipUnloadIfSticky {mode modname modfile} {
    return 0
 }
 
-proc execute-modulefile {modfile modname modnamevrvar modspec {up_namevr 1}\
-   {fetch_tags 1} {modpath {}}} {
+proc execute-modulefile {modfile modname modnamevrvar modspec requested\
+   {up_namevr 1} {fetch_tags 1} {modpath {}}} {
    # link to modnamevr variable name from calling ctx if content update asked
    if {$up_namevr} {
       upvar $modnamevrvar modnamevr
