Rename req_* events into requested_* for clarity

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -109,7 +109,7 @@ array set g_config_defs [list\
       {header idx variant alias indesym sym tag key} {} {} eltlist}\
    locked_configs {{} {@lockedconfigs@} 0 o}\
    logged_events {MODULES_LOGGED_EVENTS {@loggedevents@} 1 l {all_eval\
-      req_eval req_cmd} {} {} eltlist}\
+      requested_eval requested_cmd} {} {} eltlist}\
    logger {MODULES_LOGGER {@loggercmd@} 1 s}\
    mcookie_check {MODULES_MCOOKIE_CHECK always 0 s {eval always}}\
    mcookie_version_check {MODULES_MCOOKIE_VERSION_CHECK\
