--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -456,7 +456,7 @@ proc module {command args} {
    }
 
    if {$topcall} {
-      logEvent req_cmd {command} $command arguments $args
+      logEvent requested_cmd {command} $command arguments $args
       # Find and execute any global rc file found
       runModulerc
    }
@@ -593,7 +593,7 @@ proc ml {args} {
          show_mtime show_filter search_filter search_match dump_state\
          addpath_pos not_req tag_list fargs
 
-      logEvent req_cmd {command} ml arguments $args
+      logEvent requested_cmd {command} ml arguments $args
 
       # Find and execute any global rc file found
       runModulerc
