--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -793,7 +793,7 @@ proc reportFlush {} {
 
 proc logEvent {event args} {
    set is_logged_event [expr {$event in [getConf logged_events] || ($event eq\
-      {req_eval} && {all_eval} in [getConf logged_events])}]
+      {requested_eval} && {all_eval} in [getConf logged_events])}]
    if {$is_logged_event} {
       set log_info_list [list user [getState username] {*}$args]
       set log_formatted_list {}
