Change all_eval event into auto_eval
Change the all_eval event into auto_eval, an event dedicated to
automatically triggered evaluations. This way no event name surrounds
multiple events.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -108,7 +108,7 @@ array set g_config_defs [list\
    list_terse_output {MODULES_LIST_TERSE_OUTPUT {@listterseoutput@} 0 l\
       {header idx variant alias indesym sym tag key} {} {} eltlist}\
    locked_configs {{} {@lockedconfigs@} 0 o}\
-   logged_events {MODULES_LOGGED_EVENTS {@loggedevents@} 1 l {all_eval\
+   logged_events {MODULES_LOGGED_EVENTS {@loggedevents@} 1 l {auto_eval\
       requested_eval requested_cmd} {} {} eltlist}\
    logger {MODULES_LOGGER {@loggercmd@} 1 s}\
    mcookie_check {MODULES_MCOOKIE_CHECK always 0 s {eval always}}\
