--- a/tcl/interp.tcl.in
+++ b/tcl/interp.tcl.in
@@ -398,7 +398,7 @@ proc execute-modulefile {modfile modname modnamevrvar modspec requested\
    if {$mode ni {refresh scan whatis}} {
       set log_info_list [list {mode} $mode module $modnamevr specified\
          $modspec modulefile $modfile {requested} $requested]
-      set log_event [expr {$requested ? {requested_eval} : {all_eval}}]
+      set log_event [expr {$requested ? {requested_eval} : {auto_eval}}]
       logEvent $log_event {*}$log_info_list
    }
 
