--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -792,9 +792,7 @@ proc reportFlush {} {
 }
 
 proc logEvent {event args} {
-   set is_logged_event [expr {$event in [getConf logged_events] || ($event eq\
-      {requested_eval} && {all_eval} in [getConf logged_events])}]
-   if {$is_logged_event} {
+   if {$event in [split [getConf logged_events] :]} {
       set log_info_list [list user [getState username] {*}$args]
       set log_formatted_list {}
       foreach {key val} $log_info_list {
