Add getConfList helper procedure

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -1293,7 +1293,7 @@ proc set-env {var val} {
 }
 
 proc isEnvVarProtected {var_name} {
-   return [expr {$var_name in [split [getConf protected_envvars] :]}]
+   return [expr {$var_name in [getConfList protected_envvars]}]
 }
 
 proc reset-to-unset-env {var {val {}}} {
