--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -510,7 +510,7 @@ proc getModulepathLabel {modpath} {
 proc getGlobalRcFileList {} {
    set rclist {}
 
-   set rcfilelist [split [getConf rcfile] :]
+   set rcfilelist [getConfList rcfile]
    if {[llength $rcfilelist]} {
       foreach rcfile $rcfilelist {
          # if rcfile is a dir, look at a modulerc file in it
