cirrus: install logger on OpenSuse test case

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -237,7 +237,7 @@ task:
     cpu: 1
     memory: 2G
   reqinstall_script: |
-    zypper install -y tcsh zsh ksh fish tcl perl python3 ruby cmake R-core R-core-packages make wget python3-Sphinx gzip git dejagnu man net-tools autoconf gcc tcl-devel
+    zypper install -y tcsh zsh ksh fish tcl perl python3 ruby cmake R-core R-core-packages make wget python3-Sphinx gzip git dejagnu man net-tools autoconf gcc tcl-devel util-linux-systemd
     zypper install -y which xrdb xvfb-run
   configure_script:
     - ./configure --enable-versioning --with-loadedmodules=null:dot --with-quarantine-vars='LD_LIBRARY_PATH LD_PRELOAD'
