Parse "not:" prefix string among advanced specifiers
Support for the "not:" prefix string is added for variant and extra
specifier search criterion.

Internal structure to represent module specification is updated to
record whether variant or extra specifier criterion is negated or not.
This boolean information is recorded next to the variant or extra
specifier name.

"not:" prefix is only accepted on module search context (module version
specification to return all matching modules).

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -807,7 +807,7 @@ proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
          # module specification
          set vrspeclist {}
          foreach vrspec [getVariantListFromVersSpec $mod] {
-            lassign $vrspec vrname vrvalisbool vrvalue
+            lassign $vrspec vrname vrnot vrvalisbool vrvalue
             lappend vrspeclist [list $vrname $vrvalue $vrvalisbool]
          }
       }
@@ -915,7 +915,7 @@ proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
          4 {lappend ret $vrname $vrarr($vrname) $vrisbool($vrname)}
          3 {lappend ret $vrname [lindex $vrarr($vrname) 0] [lindex\
             $vrarr($vrname) 1]}
-         2 {lappend ret [list $vrname $vrisbool($vrname) $vrarr($vrname)]}
+         2 {lappend ret [list $vrname 0 $vrisbool($vrname) $vrarr($vrname)]}
          1 - 5 - 6 {
             if {$vrisbool($vrname)} {
                if {$vrarr($vrname)} {
