--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1348,7 +1348,7 @@ proc prepareMapToHightlightVariant {args} {
    if {[sgr hi {}] ne {}} {
       foreach modspec $args {
          foreach vrspec [getVariantListFromVersSpec $modspec] {
-            set vrvalues [lassign $vrspec vrname vrisbool]
+            set vrvalues [lassign $vrspec vrname vrnot vrisbool]
             if {![info exists vrname_map($vrname)]} {
                set maplist [list $vrname [sgr hi $vrname]]
                # also highlight shortcut if any
