Negate search result when "not:" prefix is used
Update variant and extra specifier search to take into account the
"not:" prefix and negate result.

For extra specifier criterion, scan module evaluation is adapted to
record every modulename evaluated under "$modulepath > all > modulename"
key of the g_scanModuleElt dict structure.

--- a/tcl/interp.tcl.in
+++ b/tcl/interp.tcl.in
@@ -394,6 +394,11 @@ proc execute-modulefile {modfile modname modnamevrvar modspec requested\
       }
    }
 
+   # record all module evaluated in scan structure for negation pattern search
+   if {$mode eq {scan}} {
+      recordScanModuleElt modulename all
+   }
+
    # skip evaluation log for internal evaluation mode
    if {$mode ni {refresh scan whatis}} {
       set log_info_list [list {mode} $mode module $modnamevr specified\
