cirrus: ensure supported locale is defined on AlmaLinux test case

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -209,6 +209,10 @@ task:
 
 task:
   << : *CLONE_TEMPLATE
+  env:
+    LANGUAGE: C
+    LANG: C
+    LC_ALL: C
   arm_container:
     image: almalinux:9
     cpu: 1
