lib: use getgrouplist to fetch user's groups
Update Envmodules_InitStateUsergroupsObjCmd to rely on getgrouplist C
function rather getgroups. getgrouplist seems to be a more modern
function to get user's groups. It automatically includes primary group
if not part of supplementary groups. No duplicate result are returned.

--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -22,9 +22,10 @@ AC_CHECK_HEADERS([fcntl.h unistd.h errno.h limits.h sys/types.h pwd.h grp.h stdl
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_SSIZE_T
+AC_TYPE_UID_T
 
 # Checks for library functions.
-AC_FUNC_GETGROUPS
+AC_CHECK_FUNCS_ONCE([getgrouplist])
 
 # TEA-specific setup
 TEA_SETUP_COMPILER
