Revert "lib: use getgrouplist to fetch user's groups"
Revert use of getgrouplist C function instead of getgroups. getgrouplist
returns a result different than the one obtained with "id" command on
some OSes (FreeBSD, Cygwin, MSYS).

Stay with getgroups for the moment, as it is still the standard way
(POSIX.1-2008) to retrieve user groups.

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -40,6 +40,18 @@ libtestutil-getpwuid@SHLIB_SUFFIX@: testutil-getpwuid.c
 	$(ECHO_CC)
 	$(LDCC) $< -o $@
 
+libtestutil-getgroups@SHLIB_SUFFIX@: testutil-getgroups.c
+	$(ECHO_CC)
+	$(LDCC) $< -o $@
+
+libtestutil-0getgroups@SHLIB_SUFFIX@: testutil-0getgroups.c
+	$(ECHO_CC)
+	$(LDCC) $< -o $@
+
+libtestutil-dupgetgroups@SHLIB_SUFFIX@: testutil-dupgetgroups.c
+	$(ECHO_CC)
+	$(LDCC) $< -o $@
+
 libtestutil-getgrgid@SHLIB_SUFFIX@: testutil-getgrgid.c
 	$(ECHO_CC)
 	$(LDCC) $< -o $@
@@ -57,6 +69,9 @@ clean:
 	rm -f libtclenvmodules@TCL_SHLIB_SUFFIX@
 	rm -f libtestutil-closedir@SHLIB_SUFFIX@
 	rm -f libtestutil-getpwuid@SHLIB_SUFFIX@
+	rm -f libtestutil-getgroups@SHLIB_SUFFIX@
+	rm -f libtestutil-0getgroups@SHLIB_SUFFIX@
+	rm -f libtestutil-dupgetgroups@SHLIB_SUFFIX@
 	rm -f libtestutil-getgrgid@SHLIB_SUFFIX@
 	rm -f libtestutil-time@SHLIB_SUFFIX@
 	rm -f libtestutil-mktime@SHLIB_SUFFIX@
@@ -83,5 +98,6 @@ endif
 # let verbose by default the install/clean/test and other specific non-build targets
 $(V).SILENT: envmodules.o libtclenvmodules@TCL_SHLIB_SUFFIX@ \
 	libtestutil-closedir@SHLIB_SUFFIX@ libtestutil-getpwuid@SHLIB_SUFFIX@ \
-	libtestutil-getgrgid@SHLIB_SUFFIX@ libtestutil-time@SHLIB_SUFFIX@ \
-	libtestutil-mktime@SHLIB_SUFFIX@
+	libtestutil-getgroups@SHLIB_SUFFIX@ libtestutil-0getgroups@SHLIB_SUFFIX@ \
+	libtestutil-dupgetgroups@SHLIB_SUFFIX@ libtestutil-getgrgid@SHLIB_SUFFIX@ \
+	libtestutil-time@SHLIB_SUFFIX@ libtestutil-mktime@SHLIB_SUFFIX@
