--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -11,6 +11,9 @@
 /libtclenvmodules.so
 /libtestutil-closedir.so
 /libtestutil-getpwuid.so
+/libtestutil-getgroups.so
+/libtestutil-0getgroups.so
+/libtestutil-dupgetgroups.so
 /libtestutil-getgrgid.so
 /libtestutil-time.so
 /libtestutil-mktime.so
