ts: cover getpwuid failure in InitStateUsergroupsObjCmd
Add test to cover failure of getpwuid in InitStateUsergroupsObjCmd C
function on Darwin system.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -93,6 +93,8 @@ task:
   << : *CLONE_TEMPLATE
   env:
     COVERAGE: y
+    TEST_SPECIFIC_CONFIG: install-testsiteconfig-1
+    TESTSUITE_ENABLE_SITECONFIG: 1
   macos_instance:
     image: ghcr.io/cirruslabs/macos-sonoma-xcode:latest
   reqinstall_script:
